# tap-mssql

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_mssql/: __main__.py  client.py  json_serializer.py  tap.py
tests/: test_core.py
